--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,11 @@ boto3>=1.28.0
 openpyxl>=3.1.0
 cryptography>=41.0.0
 requests>=2.31.0
+msal>=1.24.0
+langchain>=0.1.0
+langchain-openai>=0.0.5
+langchain-core>=0.1.0
+openai>=1.0.0
 
 # Scheduler for pipeline jobs
 apscheduler>=3.10.0
